# 3d-game-engine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt  tools.hpp
Engine/app/: app.cpp  app.hpp
Engine/buffer/: buffer.cpp
Engine/core/: context.cpp  context.hpp  game_object.hpp  keyboard_controller.hpp  window.hpp
Engine/graphics/: app.cpp  graphics.cpp  graphics.hpp
Engine/graphics/core/: context.cpp  keyboard_controller.hpp
Engine/graphics/descriptor/: descriptors.cpp
Engine/graphics/model/: model.cpp
Engine/graphics/render/: pipeline.cpp  renderer.hpp
Engine/model/: model.cpp  model.hpp
Engine/render/: pipeline.cpp  renderer.cpp  renderer.hpp
Engine/scene/: oc_tree.hpp
Engine/swapchain/: swapchain.cpp
Engine/system/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp  triangle_render_system.cpp  triangle_render_system.hpp
Engine/tool/: global_info.hpp
Engine/vulkan/: CMakeLists.txt
engine/: CMakeLists.txt
engine/graphics/core/: keyboard_controller.cpp
engine/graphics/swapchain/: swapchain.cpp
engine/object/: game_object.hpp
engine/system/: simple_render_system.hpp  triangle_render_system.cpp  triangle_render_system.hpp
engine/tool/: global_info.hpp
example/HelloWorld/: CMakeLists.txt  main.cpp
example/HelloWorld/shaders/: triangle.frag.spv
example/HelloWorld/src/: app.hpp
